cmake_minimum_required (VERSION 2.8.11)
project (my-tutorial-and-take-on-cpp20-coroutines)

set (CMAKE_CXX_STANDARD 20)

add_executable(counter_01 sources/counter_01.cpp)
add_executable(counter_02 sources/counter_02.cpp)
add_executable(counter_03 sources/counter_03.cpp)
add_executable(counter_04 sources/counter_04.cpp)
add_executable(counter_05 sources/counter_05.cpp)
add_executable(generator sources/generator.cpp)
